# flux

./: .cvsignore  CMakeLists.txt  ChangeLog  SConscript  azure-pipelines.yml  fluxLib.py
cmt/: .cvsignore  requirements
doc/: Doxyfile  FluxSvcDoc2.htm  multipower.htm  release.notes  used_packages.html
flux/: AGNSpectrum.h  CompositeSource.h  EventSource.h  Flux.h  FluxException.h  FluxMgr.h  FluxSource.h  GPS.h  IFlux.h  ISpectrum.h  ISpectrumFactory.h  LaunchDirection.h  LaunchPoint.h  MapSpectrum.h  SimpleSpectrum.h  Spectrum.h  SpectrumFactory.h  SpectrumFactoryTable.h  rootplot.h
sources/: GRS01369.txt  albedop.txt  chimefile.txt  gas_gal.fits  glast_smax_flx.txt  glast_smin_flx.txt  glast_wday_flx.txt  glast_wweek_flx.txt  pulsars.txt  vela.txt
src/: AGNSpectrum.cxx  AlbedoPSpectrum.cxx  AlbedoPSpectrum.h  CHIMESpectrum.cxx  CHIMESpectrum.h  CHIMESpectrum.inc  CompositeSource.cxx  CompositeSource.h  Earth.cxx  Earth.h  EarthPhenom.cxx  EarthPhenom.h  EventSource.cxx  FILESpectrum.cxx  FILESpectrum.h  FileSource.cxx  FileSource.h  Flux.cxx  FluxMgr.cxx  FluxSource.cxx  GPS.cxx  GalElSpectrum.cxx  GalElSpectrum.h  GalPulsars.cxx  Geomag.cxx  Geomag.h  MapSpectrum.cxx  SimpleSpectrum.cxx  SourceDirection.cxx  SourceDirection.h  Spectrum.cxx  SurfaceMuons.cxx  TimeCandle.cxx  TimeCandle.h  VdgGamma.cxx  file_source.h  mainpage.h
src/rootplot/: rootAngleHist.cxx  rootEnergyHist.cxx  rootEnergyHist.h  rootHist.cxx  rootHist.h  rootplot.cxx
src/rootplot/test/: roottest.cxx
src/test/: testMgr.cxx  test_library.xml
xml/: 3EG.xml  FluxSvcParams.dtd  source.dtd  source_library.xml  test_sources.xml
